# programming_languages_list

./: .gitignore  README.md  languages.csv  pyproject.toml
src/: main.py
